--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.4.0",
+    "mongoose": "^4.9.5",
     "nodemon": "^1.11.0",
     "webpack": "^2.4.1"
   }
